--- a/extension/frontend/content_styles.css
+++ b/extension/frontend/content_styles.css
@@ -39,7 +39,7 @@
     transition: ease all 0.3s;
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: start;
     overflow: hidden;
 }
 
@@ -56,7 +56,7 @@
     color: #424242;
     font-weight: bold;
     overflow: hidden;
-    flex: 1 0 27px;
+    flex: 0 0 27px;
     padding: 0 !important;
     margin: 0 !important;
 }
@@ -70,7 +70,7 @@
     background-color: transparent !important;
     outline: none;
     box-shadow: none;
-    width: 90px;
+    width: 65px;
     text-align: left;
     appearance: none;
     cursor: pointer;
@@ -78,6 +78,33 @@
     margin: 0 !important;
     line-height: normal !important;
     background-image: none !important;
+}
+
+/* Classifier sentiment */
+.mr-classifier-sentiment {
+    display: flex;
+    align-items: center;
+    column-gap: 4px;
+}
+
+.mr-classifier-sentiment input {
+    appearance: none;
+    border: 1px solid #424242;
+    width: 9px;
+    height: 9px;
+    border-radius: 50%;
+    overflow: hidden;
+}
+
+.mr-classifier-sentiment input:checked {
+    background-color: #424242;
+}
+
+.mr-classifier-sentiment label {
+    font-family: Arial;
+    font-size: 13px !important;
+    color: #424242;
+    width: 60px;
 }
 
 /* Analyze button */
